tests/baselines/reference/tslibInJs.errors.txt
tests/cases/compiler/main.js(2,9): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
tests/cases/compiler/main.js(2,25): error TS2307: Cannot find module 'bar' or its corresponding type declarations.


==== tests/cases/compiler/main.js (2 errors) ====
    "use strict";
    const { foo } = require("bar");
            ~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
                            ~~~~~
!!! error TS2307: Cannot find module 'bar' or its corresponding type declarations.